[project]
name = "graphotimer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexeev Bronislav", email = "alexeev.dev@mail.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "rich>=14.1.0",
]

[project.scripts]
graphotimer = "graphotimer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
